--- a/paskaita14/package.json
+++ b/paskaita14/package.json
@@ -14,5 +14,10 @@
     "express": "^4.18.2",
     "pg": "^8.11.3"
   },
-  "type": "module"
+  "type": "module",
+  "args": [
+    "--signal",
+    "SIGUSR2"
+  ],
+  "delay": "1000"
 }
